--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+BOT_URL=""
+BOT_TOKEN=""
+
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
